[WK2] New fast/events/tab-focus-link-in-canvas fails from r126908 https://bugs.webkit.org/show_bug.cgi?id=95329

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-08
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

Add implementation for overriding the WebKitTabToLinksPreferenceKey
preference as well as the corresponding WKPreferences API that
is needed by WebKitTestRunner.

* Shared/WebPreferencesStore.h:
(WebKit):
* UIProcess/API/C/WKPreferences.cpp:
(WKPreferencesSetTabToLinksEnabled):
(WKPreferencesGetTabToLinksEnabled):
* UIProcess/API/C/WKPreferencesPrivate.h:
* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::overrideBoolPreferenceForTestRunner):
* WebProcess/WebPage/WebPage.h:
(WebKit::WebPage::setTabToLinksEnabled):
(WebKit::WebPage::tabToLinksEnabled):

Tools:

Explicitely disable TabToLinks setting in WebKitTestRunner.
Tests override the "WebKitTabToLinksPreferenceKey" preference
to enable it.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):

LayoutTests:

Unskip fast/events/tab-focus-link-in-canvas for WK2 now that WebKitTestRunner
supports overriding the "WebKitTabToLinksPreferenceKey" preference.

* platform/efl-wk2/TestExpectations:
* platform/wk2/Skipped:

Canonical link: https://commits.webkit.org/114064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127966 268f45cc-cd09-0410-ab3c-d52691b4dbfc